# mpyc-web

./: .env  .envrc  .gitignore  .oprc  .pylintrc  .yarnrc.yml  Makefile  README.md  bun.lockb  devenv.nix  flake.nix  index.html  justfile  netlify.toml  package.json  pyproject.toml  tsconfig.json  vite.config.ts
assets/: bench_all-TBXHt4rn.js  bench_all-de7e4e86.js  bench_serializers-985fdf36.js  bench_serializers-LPPtVBP4.js  bench_timeouts-ZCi_8R8E.js  bench_timeouts-c500eb73.js  error-b1816708.js  error-ce7bd366.js  index-0QsWfnmj.js  index-0QsWfnmj.js.map  index-0aa13a28.js  index-2OIumWc_.js  index-2OIumWc_.js.map  index-2f2b3783.js  index-2fb207d3.css  index-2quH-l8r.js  index-2quH-l8r.js.map  index-4e437038.js  index-58em1YSr.js  index-58em1YSr.js.map  index-5owMndWK.js  index-5owMndWK.js.map  index-6Pi3EC-K.js  index-6Pi3EC-K.js.map  index-6Q93Xti4.js  index-6Q93Xti4.js.map  index-6vKPLk_L.js  index-6vKPLk_L.js.map  index-7GB-o2dO.js  index-7GB-o2dO.js.map  index-A7HhrFQx.js  index-A7HhrFQx.js.map  index-CAUip0gY.js  index-CAUip0gY.js.map  index-CnTU3URC.js  index-CnTU3URC.js.map  index-D31lzpka.js  index-D31lzpka.js.map  index-ImnDvP4Y.js  index-ImnDvP4Y.js.map  (+79 more)
bench/: index.html
benches/: bnnmnist.txt  cnnmnist.txt  np_bnnmnist.txt  np_cnnmnist.txt  secretsanta.txt
mpyc-web-core/: dts.config.ts  index.ts  package.json  tsconfig.json  vite.config copy.ts  vite.config.ts
mpyc-web-demo/: index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1699713930190-d5c64118f9aa5.mjs
mpyc-web-demo-basic/: data  index.html  package.json
mpyc-web-demo-standalone/: index.html  package.json  vite.config.ts
mpyc-web-peerjs/: package.json  tsconfig.json
mpyc-web-py/lib/rstats/: pyproject.toml
mpyc-web-py/lib/rstats/rstats/: __init__.py  avg.py  bench.1.py  bench.py  bench2.py  bench_ast.py  bench_class_no_types.py  bench_context.py  bench_old.py  bench_timeit.py  bench_timeit2.py  bench_timeit3.py  bench_to_async.py  bench_with_goto.py  context.py  counter.py  format.py  goto.py  prof.py  stats.py  time.py  types.py
mpyc-web-starter/: index.html  package.json
mpycweb/: __init__.py  patches.py  run_mpc.py
nix/: devenv.nix  go-stun.nix  gole.nix  headscale-config.nix  image.nix  mpyc-demo.nix  natpunch.nix  pion-stun.nix  poetry.nix  pssh.nix  pwnat.nix  rpi1.nix
py/: mpyc_web-0.4.0-py3-none-any.whl  (+1 more)
scripts/: last.sh
(+237 files in other folders)
